# rawr-ng

./: install.sh  pyproject.toml  rawr_example_config.yaml  requirements.txt
resources/: nmap-output.xml
src/: .gitignore  _schema.py  config_reader.py  index.js  parser.py  settings.py
src/lib/enumeration/: visit.py
src/lib/input/: example.txt  nmap.py  nmap.txt
src/rawr_ng/: __init__.py  example.py
src/rawr_ng.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/screenshotter/: package-lock.json  package.json
src/screenshotter/src/: index.ts
